Fixing spacing, map section, and sizing

--- a/css/cam-foundation.css
+++ b/css/cam-foundation.css
@@ -8,7 +8,7 @@
 
 #cam-logo {
 	padding-left: 225px;
-	height: 250px;
+	width: 451px;
 }
 
 .cnf {
