--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,5 @@
 /* Code created for the JOMO, Inc. website. Designed by Ryan Payne, code written by Jeff Berlin */
 
-@media screen and (min-width: )
+@media screen and (min-width: 1679px) {
+	
+}
